<resources>
    <string name="umeng_key" translatable="false">5d9d8dc70cafb28406000377</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1616641096587052~7201013613</string>
    <string name="app_name">Gif hub</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading…</string>
    <string name="setting_nick_name">Setting nickname</string>
    <string name="confirm">Confirm</string>
    <string name="error_account_pwd">Account or password is incorrect</string>
    <string name="network_error">Network error</string>
    <string name="compose">post gif</string>
    <string name="user_home">My profile</string>
    <string name="recommend_following">Recommend following</string>
    <string name="draft_box">Draft</string>
    <string name="settings">Settings</string>
    <string name="hint_account">Account</string>
    <string name="hint_pwd">password</string>
    <string name="post">Post</string>
    <string name="collect">Collect</string>
    <string name="collect_succeed">Collect succeed</string>
    <string name="uncollect_succeed">UnCollect succeed</string>
    <string name="collect_failed">Collect failed</string>
    <string name="me">Me</string>
    <string name="discovery">Discovery</string>
    <string name="discovery_new">new</string>
    <string name="discovery_hot">hot</string>
    <string name="no_collect">You have no collections</string>
    <string name="to_collect">Go to discovery</string>
    <string name="fetch_data_failed">Fetch data failed</string>
    <string name="unknown_error">unknow error</string>
    <string name="login_status_expired">Login status expired</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="network_connect_error">Network connect error</string>
    <string name="network_connect_timeout">Network connect timeout</string>
    <string name="no_route_to_host">No route to host</string>
    <string name="network_response_code_error">Network response code error：</string>
    <string name="bad_network_view_tip">Bad network view tip</string>
    <string name="load_failed_click_to_reload">Load failed click to reload</string>
    <string name="title_loop_gif_play">循环播放GIF</string>
    <string name="summary_loop_gif_play">GIF图播放结束后自动重头播放</string>
    <string name="load_feed_failed">无法读取分享内容</string>
    <string name="fetch_feed_details_failed">获取详细信息失败</string>
    <string name="please_enter_comment">评论内容不能为空</string>
    <string name="transition_feed_detail" translatable="false">transition_feed_detail</string>
    <string name="transition_feed_detail_bg" translatable="false">transition_feed_detail_bg</string>
    <string name="transition_feed_detail_image_bg" translatable="false">transition_feed_detail_image_bg</string>
    <string name="world">世界</string>
    <string name="follow">关注</string>
    <string name="hot">热门</string>
    <string name="agree">同 意</string>
    <string name="send">发 送</string>
    <string name="gif_format_error">GIF图片格式不正确</string>
    <string name="no_more_content">没有更多内容了</string>
    <string name="give_up">舍弃</string>
    <string name="ignore">忽略</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="report">举报</string>
    <string name="remind">提醒</string>
    <string name="forward">继续</string>
    <string name="draft">草稿</string>
    <string name="search">搜索</string>
    <string name="take_photo">Take photo</string>
    <string name="your_album">Your album</string>
    <string name="currently_not_supported">该功能即将开放，敬请期待</string>
    <string name="delete_failed">删除失败</string>
    <string name="user_info_status_abnormal">当前登录状态存在异常</string>
    <string name="operation_failed_without_sdcard">您的手机没有SD卡，无法完成操作</string>
    <string name="your_phone_does_not_install_qq">您的手机还没有安装QQ</string>
    <string name="your_phone_does_not_install_wechat">您的手机还没有安装微信</string>
    <string name="your_phone_does_not_install_weibo">您的手机还没有安装微博</string>
    <string name="qq_login">QQ Login</string>
    <string name="wechat_login">Wechat login</string>
    <string name="weibo_login">Weibo login</string>
    <string name="guest_login">Guest login</string>
    <string name="modify_profile">Edit personal profile</string>
    <string name="fetch_vcode">获取验证码</string>
    <string name="fun_is_coming">好玩的就要来了</string>
    <string name="select_nickname_please">请选择一个昵称</string>
    <string name="nickname">Nickname</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_is_empty">手机号不能为空</string>
    <string name="phone_number_or_code_is_empty">手机号和验证码不能为空</string>
    <string name="phone_number_is_invalid">手机号格式不正确</string>
    <string name="sms_is_sent">已发送(%1$ds)</string>
    <string name="verify_code">验证码</string>
    <string name="description">Description</string>
    <string name="reg_code">注册码</string>
    <string name="move_on">继续</string>
    <string name="verify_failed">身份验证失败</string>
    <string name="login_canceled">登录取消</string>
    <string name="login_failed_response_is_null">登录失败，返回为空</string>
    <string name="login_failed_user_denied">登录失败，用户拒绝登录授权</string>
    <string name="login_failed_unknown_error">登录失败，出现未知错误</string>
    <string name="login_failed_token_or_openid_missing">无法获取到授权信息</string>
    <string name="register_failed_nickname_is_used">此昵称已被他人使用</string>
    <string name="register_failed">注册账号失败</string>
    <string name="reg_code_incorrect">注册码不正确</string>
    <string name="login_failed">登录失败</string>
    <string name="nickname_length_invalid">昵称长度太短</string>
    <string name="nickname_invalid">昵称只能包含中英文、数字、下划线、横线</string>
    <string name="get_baseinfo_failed">获取用户信息失败，请重新登录</string>
    <string name="get_baseinfo_failed_user_not_exist">获取用户信息失败，用户不存在</string>
    <string name="confirm_to_logout">您确定要退出当前账号吗？</string>
    <string name="open_id_or_access_token_is_null">账号授权状态不正确</string>
    <string name="phone_number_verify_code_is_null">短信验证状态不正确</string>
    <string name="your_following_feeds_is_empty">您的关注内容空空如也</string>
    <string name="go_to_follow">去关注</string>
    <string name="feed_is_deleted">该分享已被删除</string>
    <string name="hint_comment_reply">写评论</string>
    <string name="load_gif_failed">GIF加载失败，点击图片重新加载</string>
    <string name="load_image_failed">图片加载失败</string>
    <string name="your_draft_is_empty">您的草稿箱空空如也</string>
    <string name="save_to_draft_or_not">是否要保存到草稿箱？</string>
    <string name="save_to_draft_success">已保存至草稿箱</string>
    <string name="delete_draft_item">删除草稿</string>
    <string name="clean_draft_box">清空草稿箱</string>
    <string name="are_you_sure_to_clean_draft_box">确定要清空草稿箱吗？</string>
    <string name="you_are_playing_big_gif_with_roaming">您正在使用手机流量播放较大GIF图，是否继续？</string>
    <string name="forward_and_do_not_alert_again">继续并且不再提醒</string>
    <string name="favorite">Like</string>
    <string name="number_likes">%1$s likes</string>
    <string name="refeed">Resend</string>
    <string name="comment">Comment</string>
    <string name="follow_failed">关注失败</string>
    <string name="follow_too_many">您最多只能关注500名用户</string>
    <string name="follow_all_success">全部关注成功</string>
    <string name="unfollow_failed">取关失败</string>
    <string name="unfollow_confirm">您确定不再关注此用户吗？</string>
    <string name="delete_feed_confirm">您确定删除此条分享吗？</string>
    <string name="ref_feed_deleted">原分享已被删除</string>
    <string name="save_to_phone">Save to phone</string>
    <string name="must_agree_permission_to_save">必须同意权限才能保存</string>
    <string name="save_failed">Save failed</string>
    <string name="save_gif_success">GIF had save to:\nsdcard/gifShow/%1$s</string>
    <string name="save_gif_play_control_modify_or_not">是否保存对GIF播放控制的修改？</string>
    <string name="post_fun_pic">发布趣图</string>
    <string name="select_a_gif">请选择一张GIF图片</string>
    <string name="say_something">说点什么吧 &#8230;</string>
    <string name="posting">发布中</string>
    <string name="posting_please_wait">发布中，请稍后 &#8230;</string>
    <string name="uploading_gif">正在上传GIF图 %1$d%%</string>
    <string name="gif_album">GIF相册</string>
    <string name="gif_album_is_empty">您的GIF相册空空如也</string>
    <string name="giffun_need_access_storage">趣享GIF需要访问您的存储空间</string>
    <string name="allow_storage_permission_please">请在权限管理中允许存储空间权限</string>
    <string name="tip_long_press_to_preview">小提示：长按可预览GIF图</string>
    <string name="repost">转发</string>
    <string name="post_success">发布成功</string>
    <string name="post_failed">发布失败：</string>
    <string name="repost_success">转发成功</string>
    <string name="repost_failed">转发失败：</string>
    <string name="field_missing">内容不完整</string>
    <string name="gif_larger_than_20_mb">分享的GIF图不能大于20M</string>
    <string name="gif_cover_is_unreachable">无法获取到GIF封面图</string>
    <string name="gif_width_or_height_invalid">GIF图的宽度或高度不正常</string>
    <string name="gif_is_too_wide_or_too_narrow">GIF图过宽或过窄，请重新选择</string>
    <string name="gif_md5_exception">无法计算GIF图的MD5值</string>
    <string name="user_feeds_count">发布 %1$s</string>
    <string name="user_followings_count">关注 %1$s</string>
    <string name="user_followers_count">粉丝 %1$s</string>
    <string name="user_separator">|</string>
    <string name="followings">关注</string>
    <string name="followers">粉丝</string>
    <string name="report_user">举报该用户</string>
    <string name="follow_user">关注该用户</string>
    <string name="unfollow_user">取关该用户</string>
    <string name="hot_users">热门趣友</string>
    <string name="follow_all">全部关注</string>
    <string name="no_more_recommend">没有更多推荐了</string>
    <string name="no_one_follows_him">还没有人关注TA</string>
    <string name="no_one_follows_you">还没有人关注您</string>
    <string name="he_follows_no_one">TA还没有关注任何人</string>
    <string name="you_follows_no_one">您还没有关注任何人</string>
    <string name="he_posts_nothing">TA还没有发布过任何内容</string>
    <string name="you_posts_nothing">您还没有发布过任何内容</string>
    <string name="user_does_not_feed_anything">这家伙很懒，什么都没有留下&#8230;</string>
    <string name="nickname_length_init">0/12</string>
    <string name="nickname_length_limit">%1$d/12</string>
    <string name="description_length_init">0/60</string>
    <string name="description_length_limit">%1$d/60</string>
    <string name="description_content">简介：%1$s</string>
    <string name="edit_description">编辑个人简介</string>
    <string name="select_avatar">选择头像照片</string>
    <string name="select_bg_image">选择个人封面照片</string>
    <string name="hold_on_for_saving">保存中，请稍后</string>
    <string name="save_success">保存成功</string>
    <string name="album_is_empty">您的相册空空如也</string>
    <string name="confirm_to_abort_userinfo_modification">您已修改了个人信息，确定放弃保存吗？</string>
    <string name="abort">放弃</string>
    <string name="stay">留下</string>
    <string name="crop">裁剪</string>
    <string name="crop_failed">裁剪失败</string>
    <string name="feeds_and_followers_count">发布&#160;&#160;%1$s &#160;&#160;&#160;&#160; 粉丝&#160;&#160;%2$s</string>
    <string name="all_comments">All comment</string>
    <string name="load_comments_failed">Load comments fail</string>
    <string name="no_comment">No comments</string>
    <string name="hot_comment">Hot comment</string>
    <string name="read_all_comments">查看全部评论</string>
    <string name="post_comment_success">发表评论成功</string>
    <string name="post_comment_failed">发表评论失败</string>
    <string name="your_network_bad_comment_load_failed">您的网络不给力，评论加载失败</string>
    <string name="delete_comment_confirm">您确定删除这条评论吗？</string>
    <string name="pick_gif_pic">选择GIF图</string>
    <string name="select_from_album">从相册中选择</string>
    <string name="select_from_sdcard">从SD卡中选择</string>
    <string name="use_gif_url">使用图片URL地址</string>
    <string name="minutes_ago">分钟前</string>
    <string name="share_to">Share to</string>
    <string name="wechat">Wechat</string>
    <string name="wechat_memory">Moments</string>
    <string name="qq_friends">QQ</string>
    <string name="weibo">Weibo</string>
</resources>